--- a/description_list.html
+++ b/description_list.html
@@ -8,6 +8,16 @@
 </head>
 <body>
   <h1>Sample Description</h1>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="headingTag.html">Heading Tag</a></li>
+    <li><a href="paragraph.html">Paragraph</a></li>
+    <li><a href="line_brk_hrule.html">Line Break Horizontal Rule</a></li>
+    <li><a href="phrase_elements.html">Phrase Elements</a></li>
+    <li><a href="blockquote.html">Blockquote</a></li>
+    <li><a href="ordered_list.html">Ordered List</a></li>
+    <li><a href="unordered_list.html">Unordered List</a></li>
+  </ul>
   <dl>
     <dt>TCP</dt>
     <dd>
