--- a/phrase_elements.html
+++ b/phrase_elements.html
@@ -7,6 +7,16 @@
   <title>Phrase Element Examples</title>
 </head>
 <body>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="headingTag.html">Heading Tag</a></li>
+    <li><a href="paragraph.html">Paragraph</a></li>
+    <li><a href="line_brk_hrule.html">Line Break Horizontal Rule</a></li>
+    <li><a href="blockquote.html">Blockquote</a></li>
+    <li><a href="ordered_list.html">Ordered List</a></li>
+    <li><a href="unordered_list.html">Unordered List</a></li>
+    <li><a href="description_list.html">Description List</a></li>
+  </ul>
   <h1>The Power of the Web</h1>
   <p>
     According to Tim Berners-Lee, the inventor of the World Wide Web, at https://www.w3.org/press/IPO-announce:
