--- a/headingTag.html
+++ b/headingTag.html
@@ -7,6 +7,16 @@
   <title>Heading Tags</title>
 </head>
 <body>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="paragraph.html">Paragraph</a></li>
+    <li><a href="line_brk_hrule.html">Line Break Horizontal Rule</a></li>
+    <li><a href="phrase_elements.html">Phrase Elements</a></li>
+    <li><a href="blockquote.html">Blockquote</a></li>
+    <li><a href="ordered_list.html">Ordered List</a></li>
+    <li><a href="unordered_list.html">Unordered List</a></li>
+    <li><a href="description_list.html">Description List</a></li>
+  </ul>
   <h1>Heading level 1</h1>
   <h2>Heading level 2</h2>
   <h3>Heading level 3</h3>
