--- a/index.html
+++ b/index.html
@@ -4,28 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paragraph Tags</title>
+  <title>Practice_HTML</title>
 </head>
 <body>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="headingTag.html">Heading Tag</a></li>
     <li><a href="paragraph.html">Paragraph</a></li>
+    <li><a href="line_brk_hrule.html">Line Break Horizontal Rule</a></li>
     <li><a href="phrase_elements.html">Phrase Elements</a></li>
     <li><a href="blockquote.html">Blockquote</a></li>
     <li><a href="ordered_list.html">Ordered List</a></li>
     <li><a href="unordered_list.html">Unordered List</a></li>
     <li><a href="description_list.html">Description List</a></li>
   </ul>
-  <h1>Heading level 1</h1>
-  <p>This is a sample paragraph. <br> Heading tags can help to make your pages more accessible and usable. It is good
-    coding practice to use heading tags to outline the structure of your web page content.
-  </p>
-  <hr>
-  <h2>Heading level 2</h2>
-  <h3>Heading level 3</h3>
-  <h4>Heading level 4</h4>
-  <h5>Heading level 5</h5>
-  <h6>Heading level 6</h6>
 </body>
 </html>
