--- a/ordered_list.html
+++ b/ordered_list.html
@@ -7,6 +7,16 @@
   <title>Ordered List</title>
 </head>
 <body>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="headingTag.html">Heading Tag</a></li>
+    <li><a href="paragraph.html">Paragraph</a></li>
+    <li><a href="line_brk_hrule.html">Line Break Horizontal Rule</a></li>
+    <li><a href="phrase_elements.html">Phrase Elements</a></li>
+    <li><a href="blockquote.html">Blockquote</a></li>
+    <li><a href="unordered_list.html">Unordered List</a></li>
+    <li><a href="description_list.html">Description List</a></li>
+  </ul>
   <h1>My Favorite Colors</h1>
   <ol>
     <li>Blue</li>
