--- a/paragraph.html
+++ b/paragraph.html
@@ -7,6 +7,16 @@
   <title>Paragraph Tags</title>
 </head>
 <body>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="headingTag.html">Heading Tag</a></li>
+    <li><a href="line_brk_hrule.html">Line Break Horizontal Rule</a></li>
+    <li><a href="phrase_elements.html">Phrase Elements</a></li>
+    <li><a href="blockquote.html">Blockquote</a></li>
+    <li><a href="ordered_list.html">Ordered List</a></li>
+    <li><a href="unordered_list.html">Unordered List</a></li>
+    <li><a href="description_list.html">Description List</a></li>
+  </ul>
   <h1>Heading level 1</h1>
   <p>This is a sample paragraph. Heading tags can help to make your pages more accessible and usable. It is good
     coding practice to use heading tags to outline the structure of your web page content.
